--- a/app.json
+++ b/app.json
@@ -5,11 +5,12 @@
     "proxy",
     "go"
   ],
-  "env": {
-	   "UPSTREAM_SERVER": {
-		"description": "URL of upstream server to which all requests should be proxied eg.https://www.google.com"
-		}
-	 },
   "website": "https://github.com/fromxt/google-proxy-heroku.git",
   "repository": "https://github.com/fromxt/google-proxy-heroku"
+  "env": {
+     "UPSTREAM_SERVER": {
+        "description": "URL of upstream server to which all requests should be proxied eg.https://www.google.com",
+	"value": "https://www.google.com"
+	}
+	 }
 }
