--- a/app.json
+++ b/app.json
@@ -9,8 +9,7 @@
   "repository": "https://github.com/fromxt/google-proxy-heroku"
   "env": {
      "UPSTREAM_SERVER": {
-        "description": "URL of upstream server to which all requests should be proxied eg.https://www.google.com",
-	"value": "https://www.google.com"
+        "description": "URL of upstream server to which all requests should be proxied eg.https://www.google.com"
 	   }
         }
 }
